// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils tests getColumnNameArrayFromHookData util function should return 1`] = `
[
  "id",
  "name",
  "firstname",
  "lastname",
  "weight",
]
`;

exports[`utils tests getRelColumnsMapping util function should return 1`] = `
[
  {
    "column": "id",
    "refColumn": "id",
  },
  {
    "column": "name",
    "refColumn": "name",
  },
  {
    "column": "",
    "refColumn": "",
  },
]
`;

exports[`utils tests parseDbToDbRemoteRel util function should return 1`] = `
{
  "relColumns": [
    {
      "column": "name",
      "refColumn": "name",
    },
    {
      "column": "id",
      "refColumn": "weight",
    },
    {
      "column": "",
      "refColumn": "",
    },
  ],
  "relDriver": "",
  "relName": "aaaaaaa",
  "relSource": "remote_db",
  "relTable": {
    "name": "testt",
    "schema": "public",
  },
  "relType": "object",
}
`;
